public/css/principal.css
@font-face {
  font-family: 'ALSScrip';
  src: url("/fonts/alsscrp.ttf");
}

span, b, h1, h2, h3, h4, h5, p{
  font-family: 'Lato', sans-serif;
}

.logo-wrapper{
  margin: 50px auto;
}

.menu-header ul li{
  list-style: none;
  display: inline-block;
  margin:0 10px 0 10px;
  letter-spacing: 1.4px;
  font-weight: 600;
  text-transform: uppercase;
  font-size: 14px;
}

article.principal-container{
  margin: 80px 0;
}

article.post-container{
  text-align: center;
}


article.post-container div h2{
  text-align: center;
}

aside.about-me{
  text-align: center;
}



figure.img-principal-article{
  overflow: hidden;
  height: 250px;
}

footer.principal{
  margin: 70px 0 10px 0;
}

h1.text-brand{
  font-family: "ALSScrip";
  font-size: 52px;
}

img.profile_picture{
  width: 200px;
}

.center{
  margin: 0 auto;
}

.container-single-post{
  text-align: center;
}

.copyright-info{
  text-align: right;
}

.icon-tool{
  width: 32px;
}

.post-publish-date{
  color: #969696;
  font-size: 14px;
  display: block;
  margin: 10px 0;
}

